[metadata]
name = geekoncall-py
version = 0.0.1
author = Russell M. Van Tassell
author_email = russell@geekoncall.net
description = Basic Package for experimenting with Python Packaging and Testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/russellvt/geekoncall-py
project_urls =
    Bug Tracker = https://github.com/russellvt/geekoncall-py/issues
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
